fix mobile horizontal scroll and saved articles

--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -101,9 +101,8 @@
   }
 
   .newscard__paragraph {
-    height: 88px;
+    max-height: 88px;
     width: 100%;
-    -webkit-line-clamp: 4;
     text-overflow: ellipsis;
   }
 
