--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -3,18 +3,19 @@
   padding: 0px 102px;
 }
 .saved__title {
-  font-family: Roboto;
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: normal;
+  font-size: 40px;
+  line-height: 46px;
+  color: rgba(26, 27, 34, 0.5);
   font-size: 18px;
   line-height: 24px;
-  color: rgba(26, 27, 34, 0.5);
-  margin: 40px 0 28px;
 }
 
 .saved__heading {
   max-width: 530px;
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
@@ -24,7 +25,7 @@
 }
 
 .saved__subtitle {
-  font-family: Roboto;
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -40,7 +41,31 @@
 }
 
 @media screen and (max-width: 800px) {
+  
+  
   .saved__text {
     padding: 0px 40px;
   }
+  .saved__title {
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  .saved__heading {
+    font-size: 30px;
+    line-height: 34px;
+  }
+
+  .saved__subtitle {
+    margin: 50px 0 32px;
+  }
+}
+@media screen and (max-width: 615px) {
+.saved__title{
+  margin: 0 0 16px;
+}
+.saved__text{
+  padding: 0 16px;
+}
+
 }
